--- a/index.html
+++ b/index.html
@@ -21,33 +21,14 @@
                 <!-- Comands -->
 
                 <div class="my-4">
-                    <button type="button" class="btn btn-dark" id="create-project-button" data-bs-toggle="modal" data-bs-target="#newProject">Create Project</button>
-                    <button type="button" class="btn btn-dark" id="edit-project-button">Edit Project</button>
-                    <button type="button" class="btn btn-dark" id="delete-project-button">Delete Project</button>
-                </div>
-
-                <!-- Modal -->
-
-                <div class="modal fade" id="newProject" tabindex="-1" aria-labelledby="newProject" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-scrollable">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="newProjectLabel">New Project</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <form>
-                                    <div class="mb-3">
-                                        <label for="projectName" class="form-label">Project Name</label>
-                                        <input type="text" class="form-control" id="projectName" required>
-                                    </div>
-                                    <div id="tasksList"></div>
-                                    <button type="submit" class="btn btn-dark">Add Project</button>
-                                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cancel</button>
-                                </form>
-                            </div>
+                    <form>
+                        <div class="mb-3">
+                            <label for="projectName" class="form-label">Project Name</label>
+                            <input type="text" class="form-control" id="projectName" required>
                         </div>
-                    </div>
+                        <div class="d-flex flex-wrap" id="tasksList"></div>
+                        <input type="button" class="btn btn-dark" id="addProject" value='Add Project'>
+                    </form>
                 </div>
 
                 <!-- Templates -->
