--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <form>
                         <div class="mb-3">
                             <label for="projectName" class="form-label">Project Name</label>
-                            <input type="text" class="form-control" id="projectName" required>
+                            <input type="text" class="form-control required" id="projectName" required>
                         </div>
                         <div class="d-flex flex-wrap" id="tasksList"></div>
                         <input type="button" class="btn btn-dark" id="addProject" value='Add Project'>
